--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Cowin-Availability</title>
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <body id="root" class="is-boxed has-animations"></body>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
